<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tracking Taxi(Cliente)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="imgvTaxi">Taxi</string>
    <string name="title_activity_activity__login">Login Cliente</string>
    <string name="txtvNombres">Nombres</string>
    <string name="txtvNombresApellidos">Nombres y Apellidos</string>
    <string name="txtvTelefono">Telefono</string>
    <string name="txtvEmail">Email</string>
    <string name="txtvPassword">Password</string>
    <string name="txtvRegistarDatos">Registar Datos</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="txtv_Email">Email</string>
    <string name="txtv_Password">Password</string>
    <string name="btnIniciarSession">Iniciar Session</string>
    <string name="btnRegistrate">Registrate</string>
    <string name="txtvOlvidastestuPassword">Olvidastes tu Password</string>
    <string name="txtvOlvideMiPassword">Olvide Mi Password</string>
    <string name="btnIniciarSesion">IniciarSesion</string>
    <string name="imgvError">Error</string>
    <string name="txtvAviso">Email o Password Incorrectos</string>
    <string name="title_activity_activity__olvide_mi_password">Recuperar Password</string>
    <string name="txtvMensaje">Ingresa tu correo electronico para enviarte una nueva contraseña</string>
    <string name="btnEnviar">Enviar</string>
    <string name="title_activity_activity__ubicacion">Mi Ubicacion</string>
    <string name="title_activity_registrado">Registrado</string>
    <string name="btnPedirTaxi">PEDIR TAXI</string>
    
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
 	<string-array name="spinnerItems">
        <item>Cliente</item>
        <item>Taxista</item>
    </string-array>
    
 	<string-array name="countries">
        <item>India</item>
        <item>Pakistan</item>
        <item>Sri Lanka</item>
        <item>China</item>
        <item>Bangladesh</item>
        <item>Nepal</item>
        <item>Afghanistan</item>
        <item>North Korea</item>
        <item>South Korea</item>
        <item>Japan</item>
    </string-array>
    <dimen name="count">10dp</dimen>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>    
</resources>