<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:contentDescription="@string/imgvTaxi"
        android:src="@drawable/version_taxista" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtvRegistarDatos"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtvNombreApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtvNombresApellidos" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtNombresApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtvTelefono" />

    <EditText
        android:id="@+id/edtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtvEmail" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txtvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtvPassword" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnRegistrar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrar" />
         </LinearLayout>
   </LinearLayout>

 </ScrollView>
